--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -6,7 +6,9 @@
 }
 
 html {
+
     overflow: hidden;
+
 }
 
 
@@ -14,18 +16,29 @@ body{
     margin: 0;
     font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
-    max-height:100vh;
+    max-height: 100vh;
     perspective: 1px;
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color:  rgb(0, 0, 0);
+    background-color: rgba(94, 10, 133, 0.459);
+
+}
+
+table
+{
+    padding: 0;
+    margin: 0;
+    transform: translateX(150px);
+
 }
 
 h2{
     color: black;
+  
+    text-decoration: underline;
 }
   
 .container{
@@ -34,6 +47,7 @@ h2{
     display: flex;
     justify-content: space-between;
     justify-items: center;
+    transform: translateX(-120px);
 
     
 }
@@ -139,17 +153,32 @@ h2{
 
 .navbar{
     background-color: rgba(94, 10, 133, 0.459);
-    position: sticky;
+    overflow: visible;
+    position: absolute;
+    right: 0;
 
 }
 
-.nav-item{
+
+
+
+.navbar a{
+    display: inline-block;
+    width: 10em;
+}
+
+.navbar ul li{
     float: left;
-    width: 30%;
-
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    z-index: 100;
+    transform: translateY(-15px);
+ 
 }
 
-li a:hover {
+.navbar li a:hover {
     background-color: rgba(212, 6, 6, 0.692);
     color:black;
   }
@@ -175,6 +204,7 @@ li a:hover {
     height: 100vh;
     padding-top: 10vh;
     box-sizing: border-box;
+    top: 0;
 }
 
 .parallax-wrapper1{
@@ -183,13 +213,14 @@ li a:hover {
     height: 100vh;
     padding-top: 20vh;
     box-sizing: border-box;
+
 }
 
 .parallax-wrapper::before{
     content:"";
     width: 100vw;
     height: 100vh;
-    top:0;
+    top: 0;
     left:0;
     position: absolute;
     transform-style: preserve-3d;
@@ -198,7 +229,7 @@ li a:hover {
     background-position: center; 
     background-size: cover;
     z-index: -1;
-    transform:translateZ(-1px) scale(2);
+    transform: scaleY(1.04) translateZ(-1px) scale(2);
 
 }
 
@@ -220,8 +251,10 @@ li a:hover {
 }
 
 .regular-wrapper{
-    width: 100vw;
-    height: 100vh;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
     padding-top: 30vh;
     background-image: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
     background-image: no-repeat;
@@ -229,6 +262,7 @@ li a:hover {
     background-size: cover;
     z-index: 2;
     position: relative;
+    
 }
 
 .regular-wrapper1{
@@ -242,6 +276,7 @@ li a:hover {
     z-index: 2;
     position: relative;
 }
+
 
 .content{
     margin: 0 auto;
@@ -259,6 +294,10 @@ li a:hover {
 }
 
 
+#navbar{
+    overflow: hidden;
+}
+
 section#skills{
 
 }
@@ -268,10 +307,17 @@ section#intro{
 }
 
 #projects{
-
-position: initial;
-display: flex;
-top: -10px;
+top: 0;
+margin: 0;
+padding: 0;
+bottom: 0;
+height: 100%;
+width: 100%;
+position: relative;
+display: table-row-group;
+transform: translateY(-100px);
+overflow-x: scroll;
+min-height: 100%;
 }
 
 section#contact{
