--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -27,6 +27,19 @@ body{
 
 }
 
+body::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0);
+  }
+   
+body::-webkit-scrollbar-thumb {
+  
+    outline: 2px solid  rgb(0, 0, 0);
+  }
+
 table
 {
     padding: 0;
@@ -37,18 +50,151 @@ table
 
 h2{
     color: black;
-  
     text-decoration: underline;
 }
-  
+
+.navbar{
+    background-color: rgba(94, 10, 133, 0.459);
+    overflow: visible;
+    position: absolute;
+}
+
+.nav-item{
+    margin: 5px;
+    width: 15em;
+    height: 60px;
+    border: 1px solid rgba(94, 10, 133, 0.459);
+}
+
+.nav-item a{
+    line-height: 50px;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+    position: relative;
+    transition: .8s;
+    z-index: 110;
+}
+
+.nav-item span{
+    color: transparent;
+    position: relative;
+}
+
+.nav-item span::before{
+    content: 'I';
+    position: absolute;
+    width: auto;
+    height: 25px;
+    color: white;
+    transition: .2s ease-out;
+}
+
+.nav-item:nth-of-type(2) span::before{
+    content: 'P';
+    position: absolute;
+    width: auto;
+    height: 25px;
+    color: white;
+}
+
+.nav-item:nth-of-type(3) span::before{
+    content: 'S';
+    position: absolute;
+    width: auto;
+    height: 25px;
+    color: white;
+}
+
+.nav-item:nth-of-type(4) span::before{
+    content: 'C';
+    position: absolute;
+    width: auto;
+    height: 25px;
+    color: white;
+}
+
+
+.nav-item::after{
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: .8s;
+    z-index: 100;
+
+}
+
+.nav-item:hover a{
+    color: white;
+}
+
+.nav-item:hover:after{
+    background-color: rgb(32, 76, 158);
+    transform: rotate(10deg);
+}
+
+.nav-item:hover span::before{
+    color: white;
+    transform: translate(-65%, -10%) rotate(720deg);
+    font-size: 50px;
+}
+
+.navbar a{
+    display: inline-block;
+    width: 10.2em;
+    height: 60px;
+}
+
+.navbar ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: relative;     
+   
+}
+
+.navbar li{
+    float: left;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    z-index: 100;
+ 
+}
+ 
+
+
+.jumbotron{
+    margin: 100px;
+    padding: 20px 20px;
+    align-content: center;
+    text-align: center;
+    position: relative;
+    top: 95px;
+    
+}
+
+.display-4{
+    font-family: 'Raleway', sans-serif;
+    color: #cc0000;
+    text-shadow: .5px .5px black;
+}
+
+.lead{
+    font-family: 'Roboto Slab', serif;
+}
+
+
+
 .container{
     width: 800px;
     position: relative;
     display: flex;
-    justify-content: space-between;
-    justify-items: center;
-    transform: translateX(-120px);
-
+    justify-items: center; 
     
 }
 
@@ -137,7 +283,6 @@ h2{
 {
     margin: 15px 0 0;
     display: inline-block;
-
     text-decoration: none;
     font-weight: 900;
     color: red;
@@ -151,51 +296,39 @@ h2{
     color: dimgray;
 }
 
-.navbar{
-    background-color: rgba(94, 10, 133, 0.459);
-    overflow: visible;
-    position: absolute;
-    right: 0;
-
+.scrollable{
+    overflow-x: auto;
+    scrollbar-color: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
 }
 
 
-
-
-.navbar a{
-    display: inline-block;
-    width: 10em;
-}
-
-.navbar ul li{
-    float: left;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    position: relative;
-    z-index: 100;
-    transform: translateY(-15px);
- 
-}
-
-.navbar li a:hover {
-    background-color: rgba(212, 6, 6, 0.692);
-    color:black;
+.scrollable::-webkit-scrollbar {
+    width: 1em;
+  }
+   
+.scrollable::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+.scrollable::-webkit-scrollbar-thumb {
+  
+    outline: 1px solid  rgba(0, 0, 0, 0.3);
   }
 
-.jumbotron{
-    align-content: center;
-    text-align: center;
+.button{
+    position: relative;
+    width: 50px;
+    height: 50px;
 }
 
-.display-4{
-    font-family: 'Raleway', sans-serif;
-    color: #cc0000;
-    text-shadow: .5px .5px black;
-}
-
-.lead{
-    font-family: 'Roboto Slab', serif;
+i{
+    position: absolute;
+    top:50%;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    z-index: 10;
+    color: white;
 }
 
 .parallax-wrapper{
@@ -279,11 +412,12 @@ h2{
 
 
 .content{
-    margin: 0 auto;
-    padding: 50px;
-    width: 50%;
+    margin: 0;
+    padding: 0;
+    width: 100;
+    height: 100;
     color: black;
-    background: rgba(143, 126, 151, 0.699);
+
     
 }
 
@@ -314,9 +448,8 @@ bottom: 0;
 height: 100%;
 width: 100%;
 position: relative;
-display: table-row-group;
-transform: translateY(-100px);
-overflow-x: scroll;
+display: inline-block;
+transform: translateY(-90px);
 min-height: 100%;
 }
 
