--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -18,8 +18,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     max-height: 100vh;
     perspective: 1px;
-    justify-content: center;
-    align-items: center;
     transform-style: preserve-3d;
     overflow-x: hidden;
     overflow-y: auto;
@@ -174,7 +172,7 @@ h2{
     align-content: center;
     text-align: center;
     position: relative;
-    top: 95px;
+    top: 77px;
     
 }
 
@@ -191,10 +189,11 @@ h2{
 
 
 .container{
-    width: 800px;
+    width: 700px;
     position: relative;
     display: flex;
-    justify-items: center; 
+    justify-items: space-evenly; 
+
     
 }
 
@@ -226,7 +225,7 @@ h2{
 
 .container .card:hover .face.face1
 {
-    background: #ff057f;
+    background: rgb(32, 76, 158);
     transform: translateY(0px);
 }
 
@@ -307,7 +306,7 @@ h2{
   }
    
 .scrollable::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow:  6px rgba(0, 0, 0, 0.3);
   }
    
 .scrollable::-webkit-scrollbar-thumb {
@@ -316,6 +315,8 @@ h2{
   }
 
 .button{
+    margin-left: 15px;
+    margin-right: 15px;
     position: relative;
     width: 50px;
     height: 50px;
@@ -323,12 +324,88 @@ h2{
 
 i{
     position: absolute;
-    top:50%;
+    top: 50%;
+    left: 50%;
     height: 50%;
     transform: translate(-50%, -50%);
-    font-size: 20px;
     z-index: 10;
     color: white;
+}
+
+.blurred{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;   
+    filter: url(#goo);
+}
+
+.blurred::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    border-radius: 100%;
+    transition: 1.6s cubic-bezier(0,4,.80,-0.05);
+
+}
+
+.blurred::after{
+    content: '';
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    border-radius: 100%;
+    transition: 1.7s cubic-bezier(0,4,.80,-0.05);
+
+}
+
+.blurred > span:nth-of-type(1),
+.blurred > span:nth-of-type(2) {
+    position: absolute;
+    width: 56px;
+    height: 57px;
+    top: 0%;
+    left: -3px;
+    background-color: black;
+    border-radius: 100%;
+    transition: 1.4s cubic-bezier(0,2,.80,-0.05);
+
+}
+
+.button:hover .blurred::before{
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    left: 50%;
+}
+
+
+.button:hover .blurred::after{
+    width: 20px;
+    height: 20px;
+    top: 30px;
+    left: 45px;
+}
+
+.button:hover .blurred > span:nth-of-type(1){
+    width: 30px;
+    height: 30px;
+    top: -10px;
+    left: -20px;
+}
+
+.button:hover .blurred > span:nth-of-type(2){
+    width: 25px;
+    height: 25px;
+    top: 40px;
+    left: -20px;
 }
 
 .parallax-wrapper{
@@ -432,27 +509,32 @@ i{
     overflow: hidden;
 }
 
-section#skills{
-
-}
-
-section#intro{
-
-}
 
 #projects{
 top: 0;
 margin: 0;
 padding: 0;
 bottom: 0;
-height: 100%;
-width: 100%;
+left: 5px;
 position: relative;
-display: inline-block;
+display: flex;
+justify-content: space-evenly;
 transform: translateY(-90px);
-min-height: 100%;
+
 }
 
 section#contact{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-evenly;
+    left: 150px;
+    top: 80px;
+  
    
+}
+
+section#contact a{
+    color: white;
 }
