--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -21,7 +21,7 @@ body{
     transform-style: preserve-3d;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color: rgba(94, 10, 133, 0.459);
+    background-color: rgb(0, 0, 0);
 
 }
 
@@ -46,11 +46,18 @@ table
 
 }
 
-h2{
-    color: black;
-    text-decoration: underline;
-}
 
+h5{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    position: relative;
+    color:  rgb(131, 118, 118);
+    text-emphasis: bolder;
+    font-size: 20px;
+    text-shadow: 1px 1px rgb(0, 0, 0) ;
+}
 .navbar{
     background-color: rgba(94, 10, 133, 0.459);
     overflow: visible;
@@ -167,12 +174,16 @@ h2{
 
 
 .jumbotron{
+    width: 75%;
     margin: 100px;
     padding: 20px 20px;
     align-content: center;
     text-align: center;
     position: relative;
+    justify-content: space-evenly;
+    left: 25px;
     top: 77px;
+   
     
 }
 
@@ -362,7 +373,7 @@ i{
     transform: translate(-50%, -50%);
     background-color: black;
     border-radius: 100%;
-    transition: 1.7s cubic-bezier(0,4,.80,-0.05);
+    transition: 1.7s cubic-bezier(0,1.71,.05,1.7);
 
 }
 
@@ -375,7 +386,7 @@ i{
     left: -3px;
     background-color: black;
     border-radius: 100%;
-    transition: 1.4s cubic-bezier(0,2,.80,-0.05);
+    transition: 1.4s cubic-bezier(0,1.71,.05,1.7);
 
 }
 
@@ -510,7 +521,7 @@ i{
 }
 
 
-#projects{
+section#projects{
 top: 0;
 margin: 0;
 padding: 0;
@@ -523,6 +534,12 @@ transform: translateY(-90px);
 
 }
 
+section#projects h2{
+    color: rgba(185, 97, 236, 0.473);
+    text-decoration: underline;
+    text-shadow: 2px 2px rgb(7, 6, 8);
+}
+
 section#contact{
     position: relative;
     display: flex;
@@ -530,11 +547,49 @@ section#contact{
     align-content: center;
     justify-content: space-evenly;
     left: 150px;
-    top: 80px;
   
    
 }
 
+section#contact h2{
+    color: rgb(235, 148, 91);
+    text-decoration: underline;
+    text-shadow: 2px 2px rgb(7, 6, 8);
+}
+
 section#contact a{
+    color:  rgb(235, 148, 91);
+    text-shadow: 2px 2px black;
+}
+
+section#footer{
+    position: relative;
+    margin-top: 35px;
+    padding-top: 30px;
+    top: 25px;
+    height: 100%;
+}
+
+.footer-nav{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: baseline;
+    font-size: 25px;
+    font: bolder;
+    text-decoration: underline;
+    width: 100%;
+    height: 80%;
+    text-shadow: 1px 1px rgba(37, 36, 36, 0.801);
+    background-color: black;
+}
+
+.footer-item{
     color: white;
+    text-shadow: 2px 2px black;
+}
+
+.footer-item:hover a{
+    text-shadow: 2px 2px black;
 }
