--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -180,15 +180,15 @@ h5{
 
 
 .jumbotron{
-    width: 75%;
+    width: 80%;
     margin: 100px;
     padding: 20px 20px;
     align-content: center;
     text-align: center;
     position: relative;
     justify-content: space-evenly;
-    left: 25px;
-    top: 77px;
+    left: 40px;
+    top: 70px;
    
     
 }
@@ -210,6 +210,7 @@ h5{
     position: relative;
     display: flex;
     justify-items: space-evenly; 
+    align-items: center;
 
     
 }
@@ -242,17 +243,20 @@ h5{
 
 .container .card:hover .face.face1
 {
-    background: rgb(32, 76, 158);
+    background: #0DFFB2;
+    text-shadow: 1px 1px black;
     transform: translateY(0px);
 }
 
-.container .card .face.face1 .content
+
+
+.container .card .face.face1 
 {
-    opacity: 0.2;
+    opacity: 1;
     transition: 0.5s;
 }
 
-.container .card:hover .face.face1 .content
+.container .card:hover .face.face1 
 {
     opacity: 1;
 }
@@ -260,6 +264,9 @@ h5{
 .container .card .face.face1 .info img
 {
     max-width: 100px;
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .container .card .face.face1 .info h3
@@ -269,7 +276,21 @@ h5{
     color: #fff;
     text-align: center;
     font-size: 1.5em;
+    
 }
+
+.container .card:hover .face.face1 .info h3
+{
+    margin: 10px, 0, 0;
+    padding: 0;
+    color: black;
+    text-align: center;
+    font-size: 1.5em;
+    text-shadow: 1px 1px black;
+    opacity: .7;
+}
+
+
 
 .container .card .face.face2
 {
@@ -289,27 +310,27 @@ h5{
     transform: translateY(0);
 }
 
-.container .card .face.face2 .content p
+.container .card .face.face2 p
 {
     margin: 0;
     padding: 0;
 }
 
-.container .card .face.face2 .content a
+.container .card  a
 {
     margin: 15px 0 0;
     display: inline-block;
     text-decoration: none;
     font-weight: 900;
-    color: red;
+    color:  rgb(10, 10, 10);
     padding: 5px;
-    border: 1px solid red;
+    border: 1px solid black;
 }
 
-.container .card .face.face2 .content a:hover
+.container .card .face.face2 a:hover
 {
     background: white;
-    color: dimgray;
+    color:rgb(185, 97, 236);
 }
 
 .scrollable{
@@ -512,7 +533,6 @@ i{
     height: 100;
     color: black;
 
-    
 }
 
 .section{ 
@@ -546,6 +566,14 @@ section#projects h2{
     color: rgba(185, 97, 236, 0.473);
     text-decoration: underline;
     text-shadow: 2px 2px rgb(7, 6, 8);
+}
+
+section#skills{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #2e2e2e;
 }
 
 section#contact{
